Stylize organizer pages, issue with nav bar going off screen

--- a/static/css/landing_css/style.css
+++ b/static/css/landing_css/style.css
@@ -362,6 +362,20 @@ h5.subtitle {
   padding: 2%;
 }
 
+.organizerForm {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 35%;
+  height: 49%;
+  background-color: #343a40;
+  border-radius: 25px;
+  color: #fff;
+  padding: 2%;
+  text-align: center;
+}
+
 .centerHeaderText {
   text-align: center;
   color: #fff;
@@ -1361,6 +1375,7 @@ SERVICE PAGE
     color: #fff;
     padding: 2%;
   }
+
   .passwordResetEntryForm {
     position: fixed;
     top: 50%;
@@ -1373,6 +1388,7 @@ SERVICE PAGE
     color: #fff;
     padding: 2%;
   }
+
   /*----------------------
      SECTION HEAINDG
     -----------------------*/
